# runpod-worker-marker

./: Dockerfile  LICENSE  README.md  handler.py  ollama_runner.py  openai_service.py  pyproject.toml  requirements.txt  test_input.json  test_openai_service.py
.github/workflows/: docker-build-push.yml
