[project]
name = "runpod-worker-marker"
version = "0.1.0"
description = "RunPod serverless worker for Marker PDF conversion"
requires-python = ">=3.11"
dependencies = [
    "runpod>=1.7.9",
    "marker-pdf[full]>=1.7.4",
    "torch>=2.2.2,<3.0.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "requests>=2.32.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
